Document WinUI application setup